--- a/ivenza_auth_migrator/Dockerfile
+++ b/ivenza_auth_migrator/Dockerfile
@@ -5,9 +5,8 @@ RUN apt-get update && apt-get install -y default-libmysqlclient-dev
 
 RUN mkdir /source
 WORKDIR /source
-COPY ./Cargo.toml .
-COPY ./Cargo.lock .
-COPY ./src/ ./src/
+COPY ./Cargo.toml ./Cargo.lock ./
+COPY ./src/ ./src
 
 RUN cargo build --release
 RUN strip ./target/release/ivenza_auth_migrator
@@ -21,9 +20,7 @@ RUN cd /tmp && \
 # use a distroless/cc image as base to run the dynamically linked rust application in
 FROM gcr.io/distroless/cc as runtime
 
-#COPY --from=builder /dpkg /dpkg
-COPY --from=builder /dpkg/usr/lib/x86_64-linux-gnu/libmariadb.so.3 ./usr/lib/libmariadb.so.3
-COPY --from=builder /dpkg/usr/lib/x86_64-linux-gnu/libz.so /usr/lib/libz.so.1
+COPY --from=builder /dpkg/usr/lib/x86_64-linux-gnu/libmariadb.so.3 /dpkg/usr/lib/x86_64-linux-gnu/libz.so ./usr/lib/
 COPY --from=builder /source/target/release/ivenza_auth_migrator /
 
 CMD ["./ivenza_auth_migrator"]
