--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,7 +5,7 @@ networks:
       name: unicon-ivenza
 services:
   keycloakdb:
-    image: mariadb
+    image: mariadb:10.3
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: ${KEYCLOAK_PASSWORD}
