script did not work on arm based macbook, updated the following:
1) added --platform linux/amd64 to docker build command in ./run-migrator.sh so that x86 images are pulled and zlib1g-dev and libmariadb3 installs end up in the expected place (where they are copied from)

2) added --config net.git-fetch-with-client=tue flag to cargo to work around 137 error (oom), like described here https://github.com/rust-lang/cargo/issues/10781

3) updated deprecated way of configuring external network (this was not strictly needed to get it working)

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.9'
 networks:
   default:
-    external:
-      name: unicon-ivenza
+    external: true
+    name: unicon-ivenza
 services:
   keycloakdb:
     image: mariadb:10.3
