--- a/.github/workflows/publish_to_acr.yaml
+++ b/.github/workflows/publish_to_acr.yaml
@@ -20,10 +20,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Build Docker Image
-        uses: azure/docker-login@v1
+      - name: Login to acr
+        uses: docker/login-action@v2
         with:
-          login-server: ${{ env.ACR_URL }}
+          registry: ${{ env.ACR_URL }}
           username: ${{ secrets.ACR_USERNAME }}
           password: ${{ secrets.ACR_PASSWORD }}
       - run: |
