--- a/.github/workflows/publish_migration_tool_to_acr.yaml
+++ b/.github/workflows/publish_migration_tool_to_acr.yaml
@@ -28,6 +28,6 @@ jobs:
           echo ${{ env.GITHUB_REF }}
           IMAGE_TAG=$(echo ${GITHUB_REF#refs/heads/})
           IMAGE_TAG=${IMAGE_TAG//\//-}
-          docker build -f ${{ env.DOCKERFILE }} -t ${{ env.ACR_URL }}/${{ env.MICROSERVICE_NAME }}:$IMAGE_TAG .
+          docker build -f ${{ env.DOCKERFILE }} -t ${{ env.ACR_URL }}/${{ env.MICROSERVICE_NAME }}:$IMAGE_TAG ivenza_auth_migrator
           docker push ${{ env.ACR_URL }}/${{ env.MICROSERVICE_NAME }}:$IMAGE_TAG
 
