--- a/ivenza_auth_migrator/Cargo.toml
+++ b/ivenza_auth_migrator/Cargo.toml
@@ -12,5 +12,6 @@ hyper = { version = "0.14", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-uuid = {version = "1.1.2", features = ["v4", "serde"]}
-regex = "1.7.0"
+uuid = { version = "1.3.2", features = ["v4", "serde"] }
+regex = "1.8.1"
+urlencoding = "2.1.2"
