Upgrade to keycloak 21, startup call needs to be different

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,10 +1,10 @@
 # This is the keycloak version to use.
 # when overridden at build time by passing KEYCLOAK_VERSION as an argument, the given value will be used in stead of this version
-ARG KEYCLOAK_VERSION=20.0
+ARG KEYCLOAK_VERSION=21.0
 FROM quay.io/keycloak/keycloak:${KEYCLOAK_VERSION}
 
 COPY ./themes/ivenza /opt/keycloak/themes/ivenza
-COPY ./config/delihome-realm.json /tmp/delihome-realm.json
+COPY ./config/delihome-realm.json /opt/keycloak/data/import/delihome-realm.json
 
 # We want to access keycloak using the /auth context
 # https://www.keycloak.org/migration/migrating-to-quarkus
@@ -14,4 +14,4 @@ COPY ./config/delihome-realm.json /tmp/delihome-realm.json
 # https://groups.google.com/g/keycloak-user/c/wtCpDiFD70U
 # TL 13-3-2023 : Discussed with Peer not to use a relative path. If this is a requirement down the line, enable this relative path parameter
 # CMD ["start-dev","--http-relative-path /auth -Dkeycloak.import=/tmp/delihome-realm.json", "-Dkeycloak.migration.strategy=SKIP"]
-CMD ["start-dev","-Dkeycloak.import=/tmp/delihome-realm.json", "-Dkeycloak.migration.strategy=SKIP"]
+CMD ["start-dev","--import-realm"]
