--- a/ivenza_auth_migrator/Dockerfile
+++ b/ivenza_auth_migrator/Dockerfile
@@ -18,9 +18,7 @@ RUN cd /tmp && \
     for deb in *.deb; do dpkg --extract $deb /dpkg || exit 10; done
 
 # use a distroless/cc image as base to run the dynamically linked rust application in
-FROM gcr.io/distroless/cc as runtime
-COPY --from=builder /dpkg/usr/lib/x86_64-linux-gnu/libmariadb.so.3 ./usr/lib/libmariadb.so.3
-COPY --from=builder /dpkg/usr/lib/x86_64-linux-gnu/libz.so /usr/lib/libz.so.1
+# use Ubuntu 20.04 as base to extract the needed libraries from
+FROM ubuntu:latest
 COPY --from=builder /source/target/release/ivenza_auth_migrator /
-
 CMD ["./ivenza_auth_migrator"]
