--- a/ivenza_auth_migrator/Cargo.toml
+++ b/ivenza_auth_migrator/Cargo.toml
@@ -8,10 +8,10 @@ edition = "2021"
 [dependencies]
 sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio", "tls-rustls"] }
 dotenv = "0.15"
-hyper = { version = "0.14", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0.164", features = ["derive"] }
 serde_json = "1.0.97"
 uuid = { version = "1.3.4", features = ["v4", "serde"] }
 regex = "1.8.4"
 urlencoding = "2.1.2"
+reqwest = { version = "0.12", features = ["json"] }
