--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
 # This is the keycloak version to use.
 # when overridden at build time by passing KEYCLOAK_VERSION as an argument, the given value will be used in stead of this version
-ARG KEYCLOAK_VERSION=21.0
+ARG KEYCLOAK_VERSION=latest
 FROM quay.io/keycloak/keycloak:${KEYCLOAK_VERSION}
 
 COPY ./themes/ivenza /opt/keycloak/themes/ivenza
