--- a/themes/skantrae/login/theme.properties
+++ b/themes/skantrae/login/theme.properties
@@ -2,16 +2,20 @@ parent=base
 import=common/skantrae
 
 styles=css/styles.css css/login.css css/tailwindBase.css
-stylesCommon=web_modules/@patternfly/react-core/dist/styles/base.css web_modules/@patternfly/react-core/dist/styles/app.css node_modules/@patternfly/patternfly/patternfly.min.css node_modules/patternfly/dist/css/patternfly.min.css node_modules/patternfly/dist/css/patternfly-additions.min.css lib/pficon/pficon.css
+stylesCommon=node_modules/@patternfly/patternfly/patternfly.min.css node_modules/patternfly/dist/css/patternfly.min.css node_modules/patternfly/dist/css/patternfly-additions.min.css lib/pficon/pficon.css
 
 scripts=js/login.js
 
 meta=viewport==width=device-width,initial-scale=1
 
+# ---------------------------------------------------------------------
+# - Leaving all classes below as-is to keep all default pages working -
+# ---------------------------------------------------------------------
+
 kcHtmlClass=login-pf
 kcLoginClass=login-pf-page
 
-kcLogoLink=http://www.skantrae.com
+kcLogoLink=http://www.keycloak.org
 
 kcLogoClass=login-pf-brand
 
@@ -77,7 +81,6 @@ kcInputClassCheckboxInput=pf-c-check__input
 kcInputClassCheckboxLabel=pf-c-check__label
 kcInputClassRadioCheckboxLabelDisabled=pf-m-disabled
 kcInputErrorMessageClass=pf-c-form__helper-text pf-m-error required kc-feedback-text
-kcInputGroup=pf-c-input-group
 kcInputWrapperClass=col-xs-12 col-sm-12 col-md-12 col-lg-12
 kcFormOptionsClass=col-xs-12 col-sm-12 col-md-12 col-lg-12
 kcFormButtonsClass=col-xs-12 col-sm-12 col-md-12 col-lg-12
